fix: prevent horizontal scrollbars for small width devices refs d50406dc04847e21da4586b98cb1c1a66a39c0bb

--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -27,12 +27,14 @@
   --vp-c-bg: var(--s-dark-bg);
 }
 
-.Layout {
-  .VPNav {
-    width: 100vw;
+@media (min-width: 960px) {
+  .Layout {
+    .VPNav {
+      width: 100vw;
 
-    .wrapper {
-      margin: 0 16px;
+      .wrapper {
+        margin: 0 16px;
+      }
     }
   }
 }
